@@ -68,7 +68,7 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2005-2014 Michal Špaček
+ © 2005-2015 Michal Špaček
  BSD 2-Clause License
 
 =head1 VERSION 
